--- a/src/views/layouts/Header.ejs
+++ b/src/views/layouts/Header.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%- include('../../bootstrap/bootstrapCss.ejs') %>
     <!-- own style -->
-    <link rel="stylesheet" href="">
     <title>Online Shopping</title>
+    <link rel="stylesheet" href="css/index.css" >
   </head>
   <body>
