--- a/src/views/layouts/Header.ejs
+++ b/src/views/layouts/Header.ejs
@@ -7,6 +7,6 @@
     <%- include('../../bootstrap/bootstrapCss.ejs') %>
     <!-- own style -->
     <title>Online Shopping</title>
-    <link rel="stylesheet" href="css/index.css" >
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
