--- a/src/views/layouts/Nav.ejs
+++ b/src/views/layouts/Nav.ejs
@@ -1,10 +1,10 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <!-- Container wrapper -->
   <div class="container">
     <!-- Navbar brand -->
     <a class="navbar-brand me-2" href="/">
-      <i class="fa-solid fa-bag-shopping general-color"></i>
+      <i class="fa-solid fa-bag-shopping" style="color: #ff7e31"></i>
     </a>
 
     <!-- Toggle button -->
@@ -17,7 +17,7 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
-      <i class="fas fa-bars general-color"></i>
+      <i class="fas fa-bars" style="color: #ff7e31"></i>
     </button>
 
     <!-- Collapsible wrapper -->
@@ -25,19 +25,25 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link text-warning" href="/">Online Shopping</a>
+          <a class="nav-link text-light" href="/">Online Shopping</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fw-bold text-warning" href="/">Home</a>
+          <a class="nav-link fw-bold" href="/" style="color: #ff7e31">Home</a>
         </li>
         <% if(admin) { %>
         <li class="nav-item">
-          <a class="nav-link fw-bold text-warning" href="/products/create"
+          <a
+            class="nav-link fw-bold"
+            href="/products/create"
+            style="color: #ff7e31"
             >Create Product</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link fw-bold text-warning" href="/products/admin/get"
+          <a
+            class="nav-link fw-bold"
+            href="/products/admin/get"
+            style="color: #ff7e31"
             >My Product</a
           >
         </li>
@@ -50,10 +56,11 @@
         <a href="/profile/<%= admin._id %>">
           <button
             type="button"
-            class="btn btn-link px-3 me-2 text-warning"
+            class="btn btn-link px-3 me-2"
             data-mdb-toggle="tooltip"
             data-mdb-html="true"
             title="<em>Hi</em> <u><%= admin.name %></u>"
+            style="color: #ff7e31"
           >
             <%= admin.name %>
           </button>
@@ -61,7 +68,8 @@
         <form action="/logout">
           <button
             type="submit"
-            class="btn me-3 text-white bg-warning"
+            class="btn me-3 text-white"
+            style="background-color: #ff7e31"
           >
             logOut
           </button>
@@ -71,7 +79,11 @@
       <!-- Left links -->
       <div class="d-flex align-items-center">
         <a href="/login"
-          ><button type="button" class="btn btn-link text-warning px-3 me-2">
+          ><button
+            type="button"
+            class="btn btn-link px-3 me-2"
+            style="color: #ff7e31"
+          >
             Login
           </button></a
         >
