--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,7 @@
 :root {
     --main-color:orange;
     --main2-color:#ff7e31;
+    /* --main2-color: green; */
     --bg-cards:#192c40;
     --bg-section:#1d3249;
 }
