--- a/src/components/Admin/createProduct/productForm.ejs
+++ b/src/components/Admin/createProduct/productForm.ejs
@@ -90,5 +90,5 @@
     <label class="form-label" for="form6Example6">description</label>
   </div>
   <!-- Submit button -->
-  <button type="submit" class="btn btn-primary btn-block mb-4">Add Product</button>
+  <button type="submit" class="btn btn-primary btn-block mb-4 text-light" style="background-color: #ff7e31">Add Product</button>
 </form>
