--- a/src/components/Admin/adminProducts/adminProducts.ejs
+++ b/src/components/Admin/adminProducts/adminProducts.ejs
@@ -28,7 +28,7 @@
         <tr>
         <th scope="row"><%= index + 1 %></th>
         <td><%= product.name %></td>
-        <td><%= product.price %></td>
+        <td><%= product.price %>$</td>
         <td><%= product.views %></td>
         <td>
             <a href="/product/update/<%=product._id%>" class="btn text-light" style="background-color: #ff7e31">
