--- a/src/views/layouts/Header.ejs
+++ b/src/views/layouts/Header.ejs
@@ -8,5 +8,12 @@
     <!-- own style -->
     <title>Online Shopping</title>
     <link rel="stylesheet" href="css/index.css" />
+    <style>
+      .form-control:focus {
+        box-shadow: none;
+        border-color: #ff7e31;
+        outline: 0 none;
+      }
+    </style>
   </head>
   <body>
