--- a/src/components/Admin/adminProducts/adminProducts.ejs
+++ b/src/components/Admin/adminProducts/adminProducts.ejs
@@ -19,7 +19,7 @@
         <th scope="col">#</th>
         <th scope="col">Name</th>
         <th scope="col">Price</th>
-        <th scope="col">Views</th>
+        <!-- <th scope="col">Views</th> -->
         <th scope="col">Actions</th>
       </tr>
     </thead>
@@ -29,8 +29,8 @@
         <th scope="row"><%= index + 1 %></th>
         <td><%= product.name %></td>
         <td><%= product.price %>$</td>
-        <td><%= product.views %></td>
-        <td>
+        <!-- <td><%= product.views %></td> -->
+        <td class="d-flex justify-content-center align-items-center flex-wrap gap-2">
             <a href="/product/update/<%=product._id%>" class="btn text-light" style="background-color: #ff7e31">
                 <i class="fa-solid fa-pen-to-square"></i>
             </a>
