--- a/src/components/Admin/createProduct/productForm.ejs
+++ b/src/components/Admin/createProduct/productForm.ejs
@@ -5,7 +5,7 @@
   <div class="col">
     <!-- name input -->
     <div class="form-outline-dark">
-      <input type="text" id="form6Example2" class="form-control" name="name" />
+      <input type="text" id="form6Example2" class="form-control" name="name" placeholder="Prouct Name" />
       <label class="form-label" for="form6Example2">Product name</label>
     </div>
     <!-- img input -->
@@ -24,18 +24,29 @@
 </div>
   <!-- brand input -->
   <div class="form-outline-dark mb-4">
-    <input type="text" id="form6Example3" class="form-control" name="brand" />
+    <input type="text" id="form6Example3" class="form-control" name="brand" placeholder="DELL" />
     <label class="form-label" for="form6Example3">brand</label>
+  </div>
+
+   <!-- avilableColors input -->
+  <div class="form-outline-dark mb-4">
+    <input type="text" id="form6Example3" class="form-control" name="avilableColors" placeholder="for example: red-green-blue-yellow" />
+    <label class="form-label" for="form6Example3">avilable Colors</label>
+  </div>
+   <!-- avilableSizes input -->
+  <div class="form-outline-dark mb-4">
+    <input type="text" id="form6Example3" class="form-control" name="avilableSizes"  placeholder="for example: sm-md-lg-xl-xxl" />
+    <label class="form-label" for="form6Example3">avilable Sizes</label>
   </div>
   <!-- price input -->
   <div class="form-outline-dark mb-4">
-    <input type="number" id="form6Example4" class="form-control" name="price" />
+    <input type="number" id="form6Example4" class="form-control" name="price" placeholder="40" />
     <label class="form-label" for="form6Example4">price</label>
   </div>
 
    <!-- offer input -->
   <div class="form-outline-dark mb-4">
-    <input type="text" id="form6Example4" class="form-control" name="offer" />
+    <input type="text" id="form6Example4" class="form-control" name="offer" placeholder="10%"/>
     <label class="form-label" for="form6Example4">offer</label>
   </div>
 
@@ -61,7 +72,7 @@
  
    <!-- arrivalTime input -->
   <div class="form-outline-dark mb-4">
-    <input type="text" id="form6Example4" class="form-control" name="arrivalTime" />
+    <input type="text" id="form6Example4" class="form-control" name="arrivalTime" placeholder="2-3 days" />
     <label class="form-label" for="form6Example4">arrival time</label>
   </div>
 
@@ -69,7 +80,7 @@
 
    <!-- location input -->
   <div class="form-outline-dark mb-4">
-   <input type="text" id="form6Example4" class="form-control" name="location" />
+   <input type="text" id="form6Example4" class="form-control" name="location" placeholder="city/state/country" />
     <label class="form-label" for="form6Example4">location</label>
   </div>
    
