update and create products modified

--- a/src/components/Admin/createProduct/productForm.ejs
+++ b/src/components/Admin/createProduct/productForm.ejs
@@ -20,6 +20,7 @@
     <option value="watches">Watches</option>
     <option value="laptops">Laptops</option>
     <option value="mobiles">Mobiles Phone</option>
+    <option value="headphone">Head Phone</option>
    </select>
 </div>
   <!-- brand input -->
@@ -33,6 +34,7 @@
     <input type="text" id="form6Example3" class="form-control" name="avilableColors" placeholder="for example: red-green-blue-yellow" />
     <label class="form-label" for="form6Example3">avilable Colors</label>
   </div>
+
    <!-- avilableSizes input -->
   <div class="form-outline-dark mb-4">
     <input type="text" id="form6Example3" class="form-control" name="avilableSizes"  placeholder="for example: sm-md-lg-xl-xxl" />
