--- a/src/bootstrap/bootstrapCss.ejs
+++ b/src/bootstrap/bootstrapCss.ejs
@@ -9,7 +9,12 @@
   rel="stylesheet"
 />
 <!-- MDB -->
-<link
+<!-- <link
   href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.css"
   rel="stylesheet"
+/> -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
+  rel="stylesheet"
 />
+
