--- a/src/bootstrap/bootstrapJs.ejs
+++ b/src/bootstrap/bootstrapJs.ejs
@@ -1,5 +1,10 @@
 <!-- MDB -->
-<script
+<!-- <script
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"
+></script> -->
+<!-- MDB -->
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"
 ></script>
