create users page and update

--- a/src/views/layouts/Nav.ejs
+++ b/src/views/layouts/Nav.ejs
@@ -44,7 +44,12 @@
             class="nav-link fw-bold"
             href="/products/admin/get"
             style="color: #ff7e31"
-            >My Product</a
+            >Product</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link fw-bold" href="/users/get" style="color: #ff7e31"
+            >Users</a
           >
         </li>
         <% } %>
